Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObjectField.quorum
class Main
    Object v
    integer t = 5
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(integer var)
    end
end
